- Use new UTF8StringBytes - Track number of SkipLevels in a SkipList - More double-checks - Cleanups, logging, generics